tidied up sun angle plotting

--- a/mdoas_ah_ch.ipynb
+++ b/mdoas_ah_ch.ipynb
@@ -1444,7 +1444,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t = df1.index.strftime('%Y-%m-%d %H:%M:%S')\n",
