improved base image

--- a/whiteisland_levelling_image.ipynb
+++ b/whiteisland_levelling_image.ipynb
@@ -94,7 +94,7 @@
     "  vmax = maxval\n",
     "  \n",
     "  #imagery\n",
-    "  fname = 'WI_2016Ortho_50cm.tif'\n",
+    "  fname = 'WhiteIsland.tif'\n",
     "  ds = gdal.Open(fname)\n",
     "  data = ds.ReadAsArray()\n",
     "  gt = ds.GetGeoTransform()\n",
@@ -104,12 +104,12 @@
     "  #projcs = inproj.GetAuthorityCode('PROJCS') does not return projection as final line missing that is shown\n",
     "  #in https://ocefpaf.github.io/python4oceanographers/blog/2015/03/02/geotiff/\n",
     "  #hard code epsg code\n",
-    "  projection = ccrs.epsg('2193')  \n",
+    "  projection = ccrs.epsg('2193') #for NZTM\n",
+    "  #projection = ccrs.PlateCarree() #for WGS84\n",
     "  \n",
     "  \n",
     "  #plot map\n",
     "  subplot_kw = dict(projection=projection)\n",
-    "  #fig,ax = plt.subplots(figsize=(9, 9), subplot_kw=subplot_kw, dpi=200)\n",
     "  fig,ax = plt.subplots(subplot_kw=subplot_kw, dpi=200)\n",
     "  extent = (gt[0], gt[0] + ds.RasterXSize * gt[1], gt[3] + ds.RasterYSize * gt[5], gt[3])\n",
     "  img = ax.imshow(data[:3, :, :].transpose((1, 2, 0)), extent=extent, origin='upper')\n",
@@ -123,10 +123,15 @@
     "  for value, x, y in zip(diff['diff'], diff['lon_x'], diff['lat_x']):\n",
     "    plt.text(x, y, str(int(round(value))), size=4, color='white', verticalalignment='center', horizontalalignment='center', transform=text_transform)\n",
     "    \n",
-    "  #plot reference site (WI100, A) as star\n",
+    "  #plot reference site (WI100, A) as star, it plots 'inside' the circle\n",
     "  ref = diff[diff['siteID']=='WI100']\n",
-    "  plt.plot(ref['lon_x'], ref['lat_x'], color='black', markersize=10, marker='*', linestyle='None', transform=ccrs.Geodetic())\n",
+    "  plt.plot(ref['lon_x'], ref['lat_x'], color='black', markersize=7, marker='*', linestyle='None', transform=ccrs.Geodetic())\n",
     "\n",
+    "  #plot fumaroles\n",
+    "  plt.plot(177.1880, -37.5239, color='red', markersize=3, marker='o', markeredgewidth=0, linestyle='None', transform=ccrs.Geodetic()) #F0\n",
+    "  plt.plot(177.189942, -37.521880, color='red', markersize=3, marker='o', markeredgewidth=0, linestyle='None', transform=ccrs.Geodetic()) #F13\n",
+    "  plt.plot(177.1837, -37.5217, color='red', markersize=3, marker='o', markeredgewidth=0, linestyle='None', transform=ccrs.Geodetic()) #2012 Dome\n",
+    "    \n",
     "  #colour bar\n",
     "  cb = plt.colorbar()\n",
     "  cb.set_label('Height change (mm)')\n",
