--- a/ohaaki_annual_report.ipynb
+++ b/ohaaki_annual_report.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -22,6 +24,8 @@
     "from matplotlib.transforms import offset_copy\n",
     "from matplotlib import patheffects\n",
     "import matplotlib.ticker as mticker\n",
+    "\n",
+    "import numpy as np\n",
     "\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.io.img_tiles as cimgt\n",
@@ -57,7 +61,7 @@
     "    :return: UTM zone number\n",
     "    :rtype: int\n",
     "    \"\"\"\n",
-    "    return floor( ( lon + 180 ) / 6) + 1\n",
+    "    return np.floor( ( lon + 180 ) / 6) + 1\n",
     "\n",
     "def scale_bar(ax, proj, length, location=(0.5, 0.05), linewidth=3,\n",
     "              units='km', m_per_unit=1000):\n",
@@ -172,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "url = 'http://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&startdate='+startall+'&enddate='+endyear+'&maxdepth='+str(maxdepth)"
@@ -210,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#select just events with an origintime (index) in the reporting year\n",
@@ -250,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "table = eqsyr[[' latitude', 'longitude', ' depth', ' magnitude']].copy()\n",
@@ -278,21 +288,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
