time series show only daily avg

--- a/rcl_temp-news.ipynb
+++ b/rcl_temp-news.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data unevenly sampled, resample as daily mean"
+    "Data unevenly sampled, resample as daily mean to avoid any potential bias"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "collapsed": true
    },
    "source": [
-    "time-series plot, raw data, daily mean values, superimpose median (red), 0.05, 0.95 (black)"
+    "time-series plot, daily mean values only, superimpose median (red), 0.05, 0.95 (black)"
    ]
   },
   {
@@ -110,9 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = df[' t (C)'].plot(figsize=(15,5), title='Ruapehu Crater Lake temperature. Automatic (data logger) observations', alpha = 0.5, label='temperature')\n",
+    "temp = dfday[' t (C)'].plot(figsize=(15,5), title='Ruapehu Crater Lake temperature. Automatic (data logger) observations', label='temperature')\n",
     "temp.set_ylabel(\"temperature (deg C)\")\n",
-    "dfday[' t (C)'].plot(ax=temp, color='red', label='daily mean temp')\n",
     "\n",
     "temp.axhline(dfday[' t (C)'].median(), color='red', linestyle='dashed', linewidth=1, label='median')\n",
     "\n",
@@ -297,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tempm = dfm[' t (C)'].plot(figsize=(15,5), title='Ruapehu Crater Lake temperature, manual observations', label='data')\n",
+    "tempm = dfm[' t (C)'].plot(figsize=(15,5), title='Ruapehu Crater Lake temperature, manual observations', label='temperature')\n",
     "tempm.set_ylabel(\"temperature (deg C)\")\n",
     "\n",
     "tempm.axhline(dfmu[' t (C)'].median(), color='red', linestyle='dashed', linewidth=1, label='median')\n",
