fix scaling error in cross plots

--- a/whiteisland_gasflux/whiteis_so2_method_comparison.ipynb
+++ b/whiteisland_gasflux/whiteis_so2_method_comparison.ipynb
@@ -45,6 +45,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -544,7 +545,7 @@
    "source": [
     "fig, (ax0, ax1) = plt.subplots(nrows=1,ncols=2, sharex=True, sharey=True, figsize=(xsize, ysize))\n",
     "#axes range, based on observed values, not min,max of mdoas\n",
-    "ax_max = max(cospnea['obs'].max(),cospnec['obs'].max(),neamean['obs'].max(),necmean['obs'].max(),contnea['obs'].max(),contnec['obs'].max())\n",
+    "ax_max = max(cospnea['obs'].max(),cospnec['obs'].max(),nea50.max(),nec50.max(),contnea['obs'].max(),contnec['obs'].max())\n",
     "ax_max += 1.1\n",
     "\n",
     "#cospec\n",
@@ -593,7 +594,7 @@
    "source": [
     "fig, (ax0, ax1) = plt.subplots(nrows=1,ncols=2, sharex=True, sharey=True, figsize=(xsize, ysize))\n",
     "#axes range, based on observed values, not min,max of mdoas\n",
-    "ax_max = max(cospsra['obs'].max(),cospsrc['obs'].max(),sramean['obs'].max(),srcmean['obs'].max(),contsra['obs'].max(),contsrc['obs'].max())\n",
+    "ax_max = max(cospsra['obs'].max(),cospsrc['obs'].max(),sra50.max(),src50.max(),contsra['obs'].max(),contsrc['obs'].max())\n",
     "ax_max += 1.1\n",
     "\n",
     "#cospec\n",
