use both geonet fdsn ws

--- a/ssam/ssam.ipynb
+++ b/ssam/ssam.ipynb
@@ -14,13 +14,13 @@
    "source": [
     "**Plots a spectrogram of single component of seismic (or acoustic) data. Can plot a single or multiple days of data. Plotting any more than three days is very slow, and is *not* recommended. Spectrogram data are *not* stored following plotting.**\n",
     "\n",
-    "* Data from FDSN web server.\n",
+    "* Data are acquired from GeoNet's FDSN web servers, http://www.geonet.org.nz/data/tools/FDSN. The archive server is used as the first choice, and if that does not contain the data (it only keeps data older than 7 days) then the near real-time server will be used instead.\n",
     "* Data are decimated to 50 sps, giving a maximum displayed frequency of 25 Hz.\n",
     "* Data windows do not overlap.\n",
     "* Data window length is 3 minutes.\n",
-    "* Frequency resolution is 0.1 Hz. FFT is resampled to achieve this.\n",
-    "* Sensitivity removed from raw data. Then converted to nm/s.\n",
-    "* Interpolate data gaps as zeros, so time with a data gap gives zero fft, hence a blank space in the spectrogram. \n",
+    "* Frequency resolution is 0.1 Hz. Each FFT is resampled to achieve this.\n",
+    "* Sensitivity is removed from the raw data to give m/s, then converted to nm/s.\n",
+    "* Data gaps are interpolated as zeros, so time with a data gap gives zero FFT, hence a blank space in the spectrogram. \n",
     "* Colour map is bounded by 10 and 5e6. This is fixed so that all spectrogram have the same colour map."
    ]
   },
@@ -70,9 +70,9 @@
    },
    "outputs": [],
    "source": [
-    "#specify FDSN client\n",
-    "#client = Client(\"http://beta-service.geonet.org.nz\")\n",
-    "client = Client(\"GEONET\")"
+    "#GeoNet's FDSN web servers\n",
+    "arc_client = 'http://service.geonet.org.nz'\n",
+    "nrt_client = 'http://beta-service-nrt.geonet.org.nz'"
    ]
   },
   {
@@ -89,7 +89,16 @@
     "  global st\n",
     "  time1 = UTCDateTime(date1)\n",
     "  time2 = UTCDateTime(date2)\n",
-    "  st = client.get_waveforms(net, sta, loc, cmp, time1, time2 + 86400, attach_response=True)"
+    "  #st = client.get_waveforms(net, sta, loc, cmp, time1, time2 + 86400, attach_response=True)\n",
+    "  try:\n",
+    "    client = Client(arc_client)\n",
+    "    st = client.get_waveforms(net, sta, loc, cmp, time1, time2 + 86400, attach_response=True)\n",
+    "    print 'arc client successful'\n",
+    "    #if this raises an exception, try the near real-time server\n",
+    "  except:\n",
+    "    client = Client(nrt_client)\n",
+    "    st = client.get_waveforms(net, sta, loc, cmp, time1, time2 + 86400, attach_response=True)\n",
+    "    print 'nrt client successful'"
    ]
   },
   {
@@ -107,9 +116,9 @@
    },
    "outputs": [],
    "source": [
-    "date1 = '2012-08-06' #(first date to plot)\n",
-    "date2 = '2012-08-06' #(last date to plot)\n",
-    "site = 'KRVZ.10.EHZ.NZ'\n",
+    "date1 = '2017-11-09' #(first date to plot)\n",
+    "date2 = '2017-11-09' #(last date to plot)\n",
+    "site = 'MAVZ.10.HHZ.NZ'\n",
     "normalise = 'log'\n",
     "#normalise = 'lin'"
    ]
@@ -132,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#get data stream\n",
