update server urls

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "#GeoNet's FDSN web servers\n",
     "arc_client = 'http://service.geonet.org.nz'\n",
-    "nrt_client = 'http://fdsn-ws-nrt.ap-southeast-2.elasticbeanstalk.com'"
+    "nrt_client = 'http://beta-service-nrt.geonet.org.nz'"
    ]
   },
   {
@@ -177,7 +177,8 @@
     "        client = Client(nrt_client)\n",
     "        st = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time, time + 86400, attach_response=True)\n",
     "        print 'nrt client successful'\n",
-    "  st.remove_sensitivity() \n",
+    "  st.remove_sensitivity()\n",
+    "  st.merge(fill_value = 0.0) #merge streams, fill gaps with zeros\n",
     "  tr = st[0]\n",
     "  tr.data *= 1e9 #convert from m/s to nm/s\n",
     "  tr.data = np.clip(tr.data, clip*-1, clip)\n",
