add no cell scrolling

--- a/mercury/mercury_process_review.ipynb
+++ b/mercury/mercury_process_review.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "datafile = '/home/sherburn/Desktop/joint_9.catalogue'"
+    "datafile = '/home/sherburn/commercial/mrp_seismic_data_quality/rotnga/joint_9_20170705-20171012/joint_9_20170705-20171012.catalogue'"
    ]
   },
   {
