--- a/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
+++ b/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -157,8 +171,8 @@
    },
    "outputs": [],
    "source": [
-    "startyear = '2016-01-01T00:00:00'\n",
-    "endyear = '2017-01-01T00:00:00'\n",
+    "startyear = '2017-01-01T00:00:00'\n",
+    "endyear = '2018-01-01T00:00:00'\n",
     "\n",
     "#as well as annual data, show number of events since 1996\n",
     "startall = '1996-01-01T00:00:00'"
@@ -385,7 +399,8 @@
     "ax3.bar(mcount.index, mcount.publicid, width = 10, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "ax3.set_ylim([0,220])\n",
-    "plt.autoscale(enable=True, axis='x', tight=True)#tight on x data limits\n",
+    "ax3.set_xlim([startall,endyear])\n",
+    "#plt.autoscale(enable=True, axis='x', tight=True)#tight on x data limits\n",
     "plt.tight_layout()\n",
     "fig.savefig('wairakei-tauhara_monthly.png', dpi=200)"
    ]
@@ -478,7 +493,8 @@
     "ax3.bar(mcount.index, mcount.publicid, width = 10, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "ax3.set_ylim([0,220])\n",
-    "plt.autoscale(enable=True, axis='x', tight=True)#tight on x data limits\n",
+    "ax3.set_xlim([startall,endyear])\n",
+    "#plt.autoscale(enable=True, axis='x', tight=True)#tight on x data limits\n",
     "plt.tight_layout()\n",
     "fig.savefig('wairakei-tauhara_monthly-hukafalls.png', dpi=200)"
    ]
@@ -486,21 +502,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
