--- a/raoullakes/raoul_lakes.ipynb
+++ b/raoullakes/raoul_lakes.ipynb
@@ -24,6 +24,8 @@
     "- daily mean data as a solid line\n",
     "- +/- two standard deviations around the mean temperature as a semi-opaque band\n",
     "\n",
+    "Plots use somewhat 'cleaned' data, so that they look relatively 'nice', but no attempt has been made to produce a completely 'clean' dataset.\n",
+    "\n",
     "For short-term changes, the Platform team provides frequently updating plots using the full 1 sample per second data. These plots are available on the GeoNet wiki:\n",
     "- http://images.geonet.org.nz/volcano/ki/glkz/40/drum.png\n",
     "- http://images.geonet.org.nz/volcano/ki/glkz/80/drum.png\n",
@@ -36,7 +38,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -52,9 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#fdsn client\n",
@@ -65,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def daywave(date, net, sta, loc, cmp):\n",
@@ -79,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#channel data for fdsn\n",
@@ -92,9 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#get data upto how many days before now\n",
@@ -105,7 +98,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -119,9 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#column names\n",
@@ -219,9 +209,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
@@ -237,9 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read the upto date data\n",
@@ -250,12 +248,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#some data are 'bad' remove these prior to plotting so that plots look 'nice'\n",
+    "\n",
+    "#plot y-axis limits, adjust these if large (real) changes occur\n",
+    "ylim1 = 12\n",
+    "ylim2 = 35\n",
+    "errlim = 1\n",
+    "\n",
+    "#replace values that are clearly not representative of the water temperature with NaN\n",
+    "#based on data value\n",
+    "#mbt\n",
+    "#error\n",
+    "mbt.loc[mbt.value < ylim1, 'error'] = float('nan')\n",
+    "mbt.loc[mbt.value > ylim2, 'error'] = float('nan')\n",
+    "#value\n",
+    "mbt.loc[mbt.value < ylim1, 'value'] = float('nan')\n",
+    "mbt.loc[mbt.value > ylim2, 'value'] = float('nan')\n",
+    "#glt\n",
+    "glt.loc[glt.value < ylim1, 'error'] = float('nan')\n",
+    "glt.loc[glt.value > ylim2, 'error'] = float('nan')\n",
+    "#value\n",
+    "glt.loc[glt.value < ylim1, 'value'] = float('nan')\n",
+    "glt.loc[glt.value > ylim2, 'value'] = float('nan')\n",
+    "\n",
+    "#based on error value, only large values\n",
+    "#mbt\n",
+    "mbt.loc[mbt.error > errlim, 'error'] = float('nan')\n",
+    "mbt.loc[mbt.error > errlim, 'value'] = float('nan')\n",
+    "#glt\n",
+    "glt.loc[glt.error > errlim, 'error'] = float('nan')\n",
+    "glt.loc[glt.error > errlim, 'value'] = float('nan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "figsize=(15,5)\n",
+    "figsize=(20,7.5)\n",
     "plt.figure()\n",
     "temps = glt['value'].plot(label='Green Lake', color='green', figsize=figsize)\n",
     "plt.fill_between(glt.index, glt.value-2*glt.error, glt.value+2*glt.error, color='green', alpha=0.3)\n",
@@ -264,8 +300,44 @@
     "temps.legend(loc='best')\n",
     "temps.set_ylabel('water temperature (degC)')\n",
     "temps.set_title('Green Lake and Marker Bay Temperatures (daily averages)', fontsize=16)\n",
+    "temps.set_ylim(ylim1,ylim2)\n",
     "plt.xlabel(\"\") #get rid of useless 'date' label\n",
     "plt.savefig('glt_mbt.png', dpi=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Difference between Green Lake and Marker Bay temperatures**\n",
+    "\n",
+    "Marker Bay is warmer than Green Lake, but the temperature difference has gradually reduced over time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tdif = mbt['value'] - glt['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "figsize=(20,7.5)\n",
+    "plt.figure()\n",
+    "dif = tdif.plot(color='red', figsize=figsize)\n",
+    "dif.set_ylabel('temperature difference (degC)')\n",
+    "dif.set_title('Marker Bay - Green Lake, Temperature Difference (daily averages)', fontsize=16)\n",
+    "plt.xlabel(\"\") #get rid of useless 'date' label\n",
+    "plt.savefig('tdif.png', dpi=100)"
    ]
   },
   {
@@ -278,9 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read the upto date data\n",
@@ -293,9 +363,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#some data are 'bad' remove these prior to plotting so that plots look 'nice'\n",
+    "\n",
     "#plot y-axis limits, adjust these if large (real) changes occur\n",
     "ylim1 = 0.5\n",
     "ylim2 = 3.5\n",
+    "errlim = 0.1\n",
     "\n",
     "#replace values that are clearly not representative of the water depth with NaN\n",
     "#green lake level data have some issues!\n",
@@ -304,7 +377,11 @@
     "gll.loc[gll.value > ylim2, 'error'] = float('nan')\n",
     "#value\n",
     "gll.loc[gll.value < ylim1, 'value'] = float('nan')\n",
-    "gll.loc[gll.value > ylim2, 'value'] = float('nan')"
+    "gll.loc[gll.value > ylim2, 'value'] = float('nan')\n",
+    "\n",
+    "#based on error value, only large values\n",
+    "gll.loc[gll.error > errlim, 'error'] = float('nan')\n",
+    "gll.loc[gll.error > errlim, 'value'] = float('nan')"
    ]
   },
   {
@@ -313,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "figsize=(15,5)\n",
+    "figsize=(20,7.5)\n",
     "plt.figure()\n",
     "level = gll['value'].plot(color='green', figsize=figsize)\n",
     "plt.fill_between(gll.index, gll.value-2*gll.error, gll.value+2*gll.error, color='green', alpha=0.3)\n",
