airborne gas in t/d

--- a/whiteiscombi.ipynb
+++ b/whiteiscombi.ipynb
@@ -55,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -71,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@np.vectorize\n",
@@ -107,9 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "names = ['dt', 'obs', 'err']\n",
@@ -131,9 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#S02 cospec\n",
@@ -155,8 +147,8 @@
     "#H2S contouring\n",
     "url = 'https://fits.geonet.org.nz/observation?typeID=H2S-flux-a&siteID=WI000&methodID=cont'\n",
     "h2s_cont = pd.read_csv(url, names=names, skiprows=1, parse_dates=True, index_col='dt')\n",
-    "h2s_cont['obs'] = h2s_cont['obs'] * 100 #H2S very small, x 100 for plotting\n",
-    "h2s_cont['err'] = h2s_cont['err'] * 100"
+    "h2s_cont['obs'] = h2s_cont['obs'] * 50 #H2S very small, x 50 for plotting\n",
+    "h2s_cont['err'] = h2s_cont['err'] * 50"
    ]
   },
   {
@@ -169,9 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Calculate TDS as we go\n",
@@ -232,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#fumarole zero thermocouple\n",
@@ -264,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#photo comparison\n",
@@ -292,12 +278,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "rsamfile = '/home/sherburn/geonet/my_rsam/WIZ.asc'\n",
+    "rsamfile = '/home/ruma/scratch/WIZ.asc'\n",
     "rsam = pd.read_csv(rsamfile, names=rsamnames, delim_whitespace=True, parse_dates=True, index_col='dt')\n",
     "rsam = rsam[(rsam['obs']>0)]"
    ]
@@ -338,9 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#siteID=WI020\n",
@@ -366,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#ensure values at same time so can calculate a ratio\n",
@@ -389,9 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#remove all rows in s02_cont and s02_cosp that have a zero observation value, as this causes a 'divide by zero' error\n",
@@ -402,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#ensure values at same time so can calculate a ratio\n",
@@ -420,7 +396,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -496,28 +471,34 @@
     "ax0a.tick_params(axis='y', colors='blue')\n",
     "ax0a.set_ylabel('Mg/Cl ratio', color = 'blue')\n",
     "ax0a.legend(loc = 'upper right', fontsize = 8)\n",
-    "ax0.set_title('TDS & Mg/Cl ratio', loc='left')\n",
+    "ax0.set_title('Lake water, TDS & Mg/Cl ratio', loc='left')\n",
     "\n",
     "#-----------------------------------\n",
     "\n",
     "#Airborne gas flux\n",
     "#limited y-axis, drop one large outlier\n",
-    "s02_cosp['obs'].plot(ax=ax1, marker='o', linestyle=':', color='red', yerr=s02_cosp['err'], label='SO2-flux-a cosp')\n",
-    "s02_cont['obs'].plot(ax=ax1, marker='^', linestyle=':', color='red', yerr=s02_cont['err'], label='SO2-flux-a cont')\n",
-    "c02_cont['obs'].plot(ax=ax1, figsize=(xsize, ysize), marker='o', linestyle=':', color='green', yerr=c02_cont['err'], label='CO2-flux-a cont')\n",
-    "h2s_cont['obs'].plot(ax=ax1, figsize=(xsize, ysize), marker='o', linestyle=':', color='blue', yerr=h2s_cont['err'], label='H2S-flux-a cont x 100')\n",
+    "temp = s02_cosp['obs']*kgs2tpd\n",
+    "temp.plot(ax=ax1, marker='o', linestyle=':', color='red', yerr=s02_cosp['err']*kgs2tpd, label='SO2-flux-a cosp')\n",
+    "temp = s02_cont['obs']*kgs2tpd\n",
+    "temp.plot(ax=ax1, marker='^', linestyle=':', color='red', yerr=s02_cont['err']*kgs2tpd, label='SO2-flux-a cont')\n",
+    "temp = h2s_cont['obs']*kgs2tpd\n",
+    "temp.plot(ax=ax1, figsize=(xsize, ysize), marker='o', linestyle=':', color='blue', yerr=h2s_cont['err']*kgs2tpd, label='H2S-flux-a cont x 50')\n",
     "\n",
-    "ax1.set_ylabel('gas flux (kg/s)')\n",
-    "ax1.set_ylim(0,50)\n",
+    "ax1.set_ylabel('gas flux (t/d)')\n",
+    "ax1.set_ylim(0,2500)\n",
     "ax1.grid(b=True, which='major', color='black', linestyle='--', alpha=0.5)\n",
-    "ax1.legend(loc = 'best', fontsize = 8)\n",
+    "ax1.legend(loc = 'upper left', fontsize = 8)\n",
     "\n",
-    "#alternate y-axis, tonnes/day\n",
+    "#alternate y-axis, co2\n",
     "ax1a = ax1.twinx()\n",
     "y1,y2 = ax1.get_ylim()\n",
-    "ax1a.set_ylim(y1*kgs2tpd, y2*kgs2tpd)\n",
-    "ax1a.tick_params(axis='y', colors='gray')\n",
-    "ax1a.set_ylabel('gas flux (t/d)', color = 'gray')\n",
+    "ax1a.set_ylim(y1*1.5, y2*1.5)\n",
+    "ax1a.tick_params(axis='y', colors='green')\n",
+    "temp = c02_cont['obs']*kgs2tpd\n",
+    "temp.plot(ax=ax1a, figsize=(xsize, ysize), marker='o', linestyle=':', color='green', yerr=c02_cont['err']*kgs2tpd, label='CO2-flux-a cont')\n",
+    "ax1a.set_ylabel('CO2 gas flux (t/d)', color = 'green')\n",
+    "ax1a.legend(loc = 'upper right', fontsize = 8)\n",
+    "\n",
     "ax1.set_title('Airborne gas flux', loc='left')\n",
     "\n",
     "#-----------------------------------\n",
@@ -530,7 +511,7 @@
     "axml.grid(b=True, which='major', color='black', linestyle='--', alpha=0.5)\n",
     "axml.legend(loc = 'best', fontsize = 8)\n",
     "axml.set_ylim(0,80)\n",
-    "axml.set_title('C/S molar ratio', loc='left')\n",
+    "axml.set_title('Airborne gas, C/S molar ratio', loc='left')\n",
     "               \n",
     "#-----------------------------------\n",
     "               \n",
@@ -543,7 +524,7 @@
     "axsl.grid(b=True, which='major', color='black', linestyle='--', alpha=0.5)\n",
     "axsl.legend(loc = 'best', fontsize = 8)\n",
     "\n",
-    "axsl.set_title('Soil gas, CO2', loc='left')\n",
+    "axsl.set_title('Main Crater soil gas, CO2', loc='left')\n",
     "#-----------------------------------\n",
     "\n",
     "#Fumarole zero temperatures\n",
@@ -571,7 +552,7 @@
     "axrsam.set_ylabel('ground velocity (nm/s)')\n",
     "axrsam.grid(b=True, which='major', color='black', linestyle='--', alpha=0.5)\n",
     "axrsam.legend(loc = 'best', fontsize = 8)\n",
-    "axrsam.set_title('Daily RSAM', loc='left')\n",
+    "axrsam.set_title('Daily mean RSAM', loc='left')\n",
     "\n",
     "axrsam.set_xlim(datemin, now)"
    ]
