--- a/whiteiscombi.ipynb
+++ b/whiteiscombi.ipynb
@@ -55,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -69,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "@np.vectorize\n",
@@ -103,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "names = ['dt', 'obs', 'err']\n",
@@ -125,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#S02 cospec\n",
@@ -161,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Calculate TDS as we go\n",
@@ -222,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#fumarole zero thermocouple\n",
@@ -252,7 +264,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#photo comparison\n",
@@ -278,10 +292,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "rsamfile = '/home/ruma/scratch/WIZ.asc'\n",
+    "rsamfile = '/home/sherburn/geonet/my_rsam/WIZ.asc'\n",
     "rsam = pd.read_csv(rsamfile, names=rsamnames, delim_whitespace=True, parse_dates=True, index_col='dt')\n",
     "rsam = rsam[(rsam['obs']>0)]"
    ]
@@ -296,7 +312,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Peg B, siteID=WI101\n",
@@ -322,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#siteID=WI020\n",
@@ -348,7 +368,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#ensure values at same time so can calculate a ratio\n",
@@ -369,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#remove all rows in s02_cont and s02_cosp that have a zero observation value, as this causes a 'divide by zero' error\n",
@@ -380,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#ensure values at same time so can calculate a ratio\n",
@@ -396,6 +422,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -554,7 +581,10 @@
     "axrsam.legend(loc = 'best', fontsize = 8)\n",
     "axrsam.set_title('Daily mean RSAM', loc='left')\n",
     "\n",
-    "axrsam.set_xlim(datemin, now)"
+    "axrsam.set_xlim(datemin, now)\n",
+    "\n",
+    "#output plot\n",
+    "plt.savefig('whiteiscombi.png')"
    ]
   }
  ],
