xlim for time-series added

--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import cartopy\n",
@@ -81,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def haversine_np(lon1, lat1, lon2, lat2):\n",
@@ -114,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def utm_from_lon(lon):\n",
@@ -198,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lonmin = 176.147\n",
@@ -229,20 +237,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start = '2012-05-15T00:00:00'\n",
-    "thisrpt = '2016-01-01T00:00:00'\n",
-    "end = '2017-01-01T00:00:00'\n",
+    "thisrpt = '2017-01-01T00:00:00'\n",
+    "end = '2018-01-01T00:00:00'\n",
     "\n",
     "#previous report period\n",
-    "lastrpt = '2015-01-01T00:00:00'\n",
-    "lastend = '2016-01-01T00:00:00'\n",
+    "lastrpt = '2016-01-01T00:00:00'\n",
+    "lastend = '2017-01-01T00:00:00'\n",
     "\n",
     "#report period before that\n",
-    "last2rpt = '2014-01-01T00:00:00'\n",
-    "last2end = '2015-01-01T00:00:00'"
+    "last2rpt = '2015-01-01T00:00:00'\n",
+    "last2end = '2016-01-01T00:00:00'"
    ]
   },
   {
@@ -262,20 +272,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#this file needs to be kept up to date as new data are processed\n",
-    "hypdd = pd.read_csv('rotnga_hypodd_all.csv', usecols=[3,4,5,6,7,8], parse_dates={\"ot\" : ['YYYY-MM-DD','hh:mm:sec']}, index_col='ot')"
+    "hypdd = pd.read_csv('rotnga_hypodd_all.csv', usecols=[3,4,5,6,7,8], parse_dates={\"ot\" : ['YYYY-MM-DD','hh:mm:sec']}, index_col='ot')\n",
+    "hypdd.sort_index(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "hypdd.head()"
+    "print hypdd.head()\n",
+    "print hypdd.tail()"
    ]
   },
   {
@@ -297,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#filter hypocentres to plot area, to just get ngatamariki\n",
@@ -316,22 +334,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#filter hypocentres for reporting period, to get rotokawa for just reporting period\n",
-    "hyprpt = hypdd[(hypdd.index>thisrpt)&(hypdd.index<end)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "hyprpt.head()"
+    "#filter hypocentres for reporting period, to get ngatamariki for just reporting period\n",
+    "hyprpt = hypdd[(hypdd.index>thisrpt)&(hypdd.index<end)]"
    ]
   },
   {
@@ -346,7 +355,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#unset ml shows as -9, which plots are M9 symbol, remove\n",
+    "hyprpt = hyprpt[hyprpt['ml']>0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "hyprpt['ml'].describe()"
@@ -500,13 +523,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Cross-section**"
+    "**Cross-section, within 1.5 km of the line**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#export data\n",
@@ -519,7 +544,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#read output of external program\n",
@@ -540,7 +567,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#read well data (pre-projected using well_section.csh)\n",
@@ -557,15 +586,6 @@
     "well10 = pd.read_csv('well_section_10.dat', sep='\\s+', names=names)\n",
     "well11 = pd.read_csv('well_section_11.dat', sep='\\s+', names=names)\n",
     "well12 = pd.read_csv('well_section_12.dat', sep='\\s+', names=names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "well01.head()"
    ]
   },
   {
@@ -635,6 +655,8 @@
    },
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
+    "\n",
     "#divide into north and south clusters, latitude is that on power station\n",
     "hyprptnorth = hyprpt[hyprpt['latitude']>-38.546]\n",
     "hyprptsouth = hyprpt[hyprpt['latitude']<-38.546]\n",
@@ -646,6 +668,7 @@
     "ax.yaxis.grid()\n",
     "\n",
     "ax.set_ylim([0,3.0])\n",
+    "ax.set_xlim([thisrpt,end])\n",
     "ax.set_ylabel('Magnitude')\n",
     "ax.tick_params(labelright = True)\n",
     "\n",
@@ -675,10 +698,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#divide into north and south clusters, latitude is that of power station\n",
+    "#hypdd is events within Ngatamariki area\n",
+    "\n",
+    "hypdd = hypdd[hypdd.index < end]\n",
+    "\n",
     "north = hypdd[hypdd['latitude']>-38.546]\n",
     "south = hypdd[hypdd['latitude']<-38.546]\n",
     "\n",
@@ -722,7 +751,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#rotokawa\n",
@@ -762,7 +793,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "names = ['lon', 'lat', 'name']\n",
@@ -788,7 +821,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wlonmin = 176.116\n",
