--- a/mercury/mercury_process_review.ipynb
+++ b/mercury/mercury_process_review.ipynb
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "datafile = '/home/sherburn/commercial/mrp_seismic_data_quality/rotnga/joint_9_20170705-20171012/joint_9_20170705-20171012.catalogue'"
+    "datafile = '/home/sherburn/commercial/mrp_seismic_data_quality/rotnga/joint_10_20171013-20180109/joint_10_20171013-20180109.catalogue'"
    ]
   },
   {
@@ -185,6 +185,26 @@
     "figsize = (15,5)\n",
     "mt = eqs['magnitude'].plot(linestyle='None', marker='o', color='red', figsize=figsize)\n",
     "mt.set_ylabel('magnitude')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Depth time series**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "figsize = (15,5)\n",
+    "dt = eqs['depth'].plot(linestyle='None', marker='o', color='red', figsize=figsize)\n",
+    "dt.set_ylabel('depth (km)')\n",
+    "dt.set_ylim(0, 10)\n",
+    "plt.gca().invert_yaxis()"
    ]
   }
  ],
